app/assets/stylesheets/_base.scss
:root {
  /* ci colors */
  --blue: #0060ff;
  --violet: #3c325c;
  --orange: #f26538;
  --white: #f4f9fd;
  --light-gray: #d0d3e8;
  --dark-gray: #282828;

  /* grays */
  --silver: #eee;
  --aluminum: #999;
  --jumbo: #888;
  --steel: #666;

  /* veracity */
  --true: var(--blue);
  --untrue: #eb1d2b;
  --misleading: #ffba00;
  --unverifiable: #9dbaeb;

  /* font */
  --font-family: Lato, sans-serif;
  --normal-typesize: 16px;
  --medium-typesize: 18px;
  --large-typesize: 22px;

  /* grid */
  --gutter: 50px;
  --gap: 1.5rem;

  /* photos */
  --large-portrait: 100px;
  --small-portrait: 70px;

  /* root props */
  font-size: var(--normal-typesize);
  font-family: var(--font-family);
  color: var(--violet);
  background-color: var(--white);
}

html,
body {
  margin: 0;
  padding: 0;
  // -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: var(--orange);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

footer {
  overflow: hidden;
}

footer p {
  grid-column: 1 / -1;
}

h1 {
  font-size: var(--large-typesize);
  margin: 2rem 0 0.5rem;
  line-height: 1.4;
}

h2 {
  font-size: var(--medium-typesize);
  margin: 2rem 0 0.5rem;
  line-height: 1.4;
}

h3 {
  margin: 2rem 0 0.5rem;
}

p {
  margin: 0 0 1rem;
}

p,
li,
blockquote,
h3,
h4 {
  font-size: var(--small-typesize);
  line-height: 1.6;
}

figure {
  margin: 0;
}


header h1 img {
  max-width: 250px;
}

blockquote {
  letter-spacing: 0.025em;
  margin-left: 0;

  cite {
    display: block;
    font-size: inherit;
    color: #3c325c;
    font-style: italic;

    &::before {
      content: '— ';
    }
  }

  b {
    font-size: 90%;
    font-style: normal;
    text-transform: uppercase;
  }
}

ul.bare-list {
  padding: 0;

  li {
    list-style-type: none;
    margin-bottom: 0.25rem;
  }
}

nav {
  ul { padding: 0; }
  li { 
    list-style-type: none; 
    margin-bottom: 0.25rem;
  }
}

p.lead {
  font-weight: bold;
  line-height: 1.6;
}

.box {
  margin: 2rem -15px;
  padding: 15px;
}

.organizations {
  p {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 25px;
    margin: 25px 0;
  }

  a {
    display: grid;
  }

  img {
    margin: auto auto auto 0;
    max-width: 135px;
    max-height: 70px;
  }
}

.color-legend {
  -webkit-box-shadow: 0 0 1px 1px #eee;
  box-shadow: 0 0 1px 1px #eee;
  background: #f6f6f6;
  padding: 0 10px 5px;
  line-height: 32px;
  margin-bottom: 32px;
}

.portrait {
  display: inline-block;
  background: #eee;
  border-radius: 50%;
  width: var(--small-portrait);
  height: var(--small-portrait);
  overflow: hidden;
  margin: 0 3px 3px -2px;
  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.05);

  img {
    width: 100%;
  }
}

.statement {
  margin-top: 1rem;
  margin-bottom: calc(2 * var(--gutter));

  .portrait {
    float: right;
    width: var(--large-portrait);
    height: var(--large-portrait);
    margin-left: 0.5rem;
  }

  &:first-child {
    margin-top: 0;
  }

  blockquote {
    letter-spacing: 0.05em;
    margin: 0 0 0.5rem;
    text-indent: -0.4rem;
  }

  blockquote::before {
    content: '„';
  }

  blockquote::after {
    content: '“';
  }

  .permalink,
  .show-reasons {
    display: inline-block;
    margin-right: 1em;
  }

  .permalink {
    color: #666;

    &::after {
      content: '';
      display: inline-block;
      background-repeat: no-repeat;
      background-image: image-url('share.svg');
      background-position: 50% 50%;
      background-size: contain;
      width: 2em;
      height: 1em;
      margin-bottom: -2px;
    }
  }

  .reasons {
    margin-bottom: 40px;
    transition: all 300ms ease;

    * {
      line-height: 25px;
    }
  }

  .veracity {
    @include veracity;

    font-weight: bold;
    margin-bottom: 0.5rem;
    margin-left: 0.2rem;
  }

  table {
    margin: 20px 0;
    border-collapse: collapse;
  }

  .show-reasons .collapsed { display: none; }

  &.collapsed {
    padding-top: 0;

    .reasons {
      display: none;
    }

    .show-reasons .collapsed { display: inline; }
    .show-reasons .open { display: none; }
  }
}

.statement-preview {
  margin-bottom: 1.5rem;

  .portrait {
    float: left;
    margin: 0 1rem 0 -0.5rem;
  }

  p { margin: 0; }

  .name {
    font-size: var(--medium-typesize);
    font-weight: bold;
  }

  .veracity {
    @include veracity(1.3);

    margin: 0 0.3rem 0 -2rem;
  }
}

.statement-detail {
  blockquote {
    font-size: var(--medium-typesize);
  }

  .veracity {
    @include veracity;

    white-space: nowrap;
  }

  h1 .veracity {
    margin-left: 0.25rem;
    text-transform: uppercase;
  }
}


.pagination {
  font-size: var(--medium-typesize);

  span {
    padding: 0 2rem 0 0;
  }

  .current-page {
    background-color: var(--violet);
    color: var(--white);
  }
}

.label {
  text-transform: uppercase;
  font-weight: bold;
  font-size: 90%;

  &.factcheck { color: var(--true); }
  &.editorial { color: var(--orange); }
  &.important { color: var(--steel); }

  &.important::after { content: ') '; }
  &.important::before { content: ' ('; }
}


[data-theme="dark"] {
  color: var(--white);
  background-color: var(--dark-gray);

  p,
  li,
  blockquote,
  h3,
  h4 {
    //color: var(--white);
  }
}

.stats {
  font-weight: bold;
  font-size: 20px;
  margin: 0;
  padding: 0;
  display: flex;

  li {
    list-style: none;
    padding: 0 0.5em 0 0;

    @include veracity;
  }

  .none {
    color: #ddd !important;
  }

  .none::before {
    background-color: #ddd !important;
  }
}

.stats-box {
  display: grid;
  grid-template-columns: var(--small-portrait) 1fr;
  grid-column-gap: var(--gap);
  margin: 0 0 1rem;

  .name {
    grid-row: 1;
    grid-column: 2;
    margin: 0;
    font-size: 20px;
    font-weight: bold;
  }

  .portrait {
    grid-column: 1;
    grid-row: span 2;
  }
}

.author {
  display: grid;
  grid-template-columns: var(--large-portrait) 1fr;
  grid-column-gap: var(--gap);
  margin-bottom: 2rem;

  .portrait {
    width: var(--large-portrait);
    height: var(--large-portrait);
  }

  h2 {
    margin: 0;
  }
}

article.speaker-detail {
  .profile {
    display: grid;
    grid-template-columns: var(--large-portrait) 1fr;
    grid-column-gap: var(--gap);
  }

  h1 {
    margin: 1rem 0 0.5rem;
  }

  .portrait {
    width: var(--large-portrait);
    height: var(--large-portrait);
  }

  
}

article.preview {
  .speakers {
    float: right;
    max-width: 35%;
    margin: 0 0 -1rem 0.5rem;
  }
}

#facebook {
  overflow: hidden;
}

